<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/powderblue"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:background="@color/blanchedalmond"
                android:ems="10"
                android:fontFamily="casual"
                android:hint="@string/nombre"
                android:inputType="textPersonName"
                android:textSize="24sp"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/et_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:background="@color/blanchedalmond"
                android:ems="10"
                android:fontFamily="casual"
                android:hint="@string/correo"
                android:inputType="textEmailAddress"
                android:textSize="24sp"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/et_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:background="@color/blanchedalmond"
                android:ems="10"
                android:fontFamily="casual"
                android:hint="@string/telefono"
                android:inputType="number"
                android:textSize="24sp"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/et_clave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:background="@color/blanchedalmond"
                android:ems="10"
                android:fontFamily="casual"
                android:hint="@string/clave"
                android:inputType="textPassword"
                android:textSize="24sp"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/et_claveAgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:background="@color/blanchedalmond"
                android:ems="10"
                android:fontFamily="casual"
                android:hint="@string/claveAgain"
                android:inputType="textPassword"
                android:textSize="24sp"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/tv_fechaNacimiento_lb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="8dp"
                android:fontFamily="casual"
                android:text="@string/fecha"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_fechaNacimiento"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:gravity="center_horizontal"
                    android:text="@string/fecha_nacimiento"
                    android:textAlignment="gravity"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/ibtn_calendario"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/button_calendar"
                    android:scaleType="fitCenter"
                    app:srcCompat="@android:drawable/ic_menu_my_calendar"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_lugarNacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:fontFamily="casual"
                android:text="@string/lugar_nacimiento"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sp_lugarNacimiento"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:background="@color/blanchedalmond"
                android:entries="@array/lista_ciudades" />

            <TextView
                android:id="@+id/tv_genero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="8dp"
                android:fontFamily="casual"
                android:text="@string/sexo"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbtn_masculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:fontFamily="casual"
                    android:text="@string/sexM"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rbtn_femenino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:text="@string/sexF"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/tv_hobbies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="8dp"
                android:fontFamily="casual"
                android:text="@string/hobbie"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/ch_cantar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:text="@string/cantar"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/ch_bailar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:text="@string/bailar"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/ch_series"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:text="@string/series"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/ch_videojuegos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:text="@string/videojuego"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/ch_cocinar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:text="@string/cocinar"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/ch_leer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:text="@string/leer"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_guardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/button_rounded"
                android:fontFamily="@font/audiowide"
                android:text="@string/guardar"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="casual"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>